# ollamaCPP

./: CMakeLists.txt  README.md
